--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "joi": "^18.0.1",
+    "mongoose": "^8.19.2",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
